syntax = "proto3";

option csharp_namespace = "CareerCloud.gRPC.Protos";
import "google/protobuf/Empty.proto";
import "google/protobuf/timestamp.proto";

 service ApplicantJobApplication
{
	rpc GetApplicantJobApplication (IdRequest1) returns (ApplicantJobApplicationReply);
	rpc GetApplicantJobApplications (google.protobuf.Empty) returns (ApplicantJobApplications);
	rpc AddApplicantJobApplication (ApplicantJobApplications) returns (google.protobuf.Empty);
	rpc UpdateApplicantJobApplication (ApplicantJobApplications) returns (google.protobuf.Empty);
	rpc DeleteApplicantJobApplication (ApplicantJobApplications) returns (google.protobuf.Empty);
}


message IdRequest1
{
	string Id= 1;
}

message ApplicantJobApplicationReply
{
	  string Id = 1; 
	  string Applicant = 2;
	  string Job = 3;
      google.protobuf.Timestamp ApplicationDate = 4;
	  bytes Timestamp = 5;
}

message ApplicantJobApplications
{
	repeated ApplicantJobApplicationReply AppJobs = 1;
}